--- a/ebproof.tex
+++ b/ebproof.tex
@@ -1,5 +1,5 @@
-%% ebproof.sty
-%% Copyright 2015-2017 Emmanuel Beffara <manu@beffara.org>
+%% ebproof.tex
+%% Copyright 2015-2018 Emmanuel Beffara <manu@beffara.org>
 %
 % This work may be distributed and/or modified under the
 % conditions of the LaTeX Project Public License, either version 1.3
@@ -15,74 +15,43 @@
 %
 % This work consists of the files ebproof.sty and ebproof.tex.
 
-\documentclass{article}
-
-\DeclareRobustCommand\package[1]{\texttt{#1}}
+\documentclass{l3doc}
+\DeclareRobustCommand\package[1]{\textsf{#1}}
 
 \title{The \package{ebproof} package}
-\author{Emmanuel Beffara \\ \url{manu@beffara.org}}
-\date{Version 2.0 \\ March 17, 2017}
-
-\usepackage{amssymb}
-\usepackage{color}
-\usepackage{fancyvrb}
-\usepackage[a4paper]{geometry}
-\usepackage[colorlinks=true,urlcolor=blue]{hyperref}
-\usepackage{multicol}
+\author{Emmanuel Beffara -- \url{manu@beffara.org}}
+\date{Version 2.0 -- March 17, 2017}
 
 \usepackage{tikz}
 \usetikzlibrary{decorations.pathmorphing}
 
 \usepackage{ebproof}
 
-\newcommand\lit[1]{\texttt{#1}}
-\newcommand\cs[1]{\lit{\char`\\#1}}
-\newcommand\env[1]{\lit{#1}}
-\newcommand\opt[1]{\lit{#1}}
-\newcommand\meta[1]{$\langle$\textit{#1}$\rangle$}
-\newcommand\oarg[1]{\lit[\meta{#1}\lit]}
-\newcommand\marg[1]{\lit{\{}\meta{#1}\lit{\}}}
-
-\newenvironment{csdoc}[1]{%
-  \smallbreak\noindent{#1}%
-  \begin{list}{}{%
-    \topsep=1ex%
-  }%
-  \item
-}{%
-  \end{list}%
-}
-
-\newenvironment{example}[1]{%
-  \def\exampleoptions{#1}%
-  \VerbatimOut{example.tex}}{%
-  \endVerbatimOut
+\newenvironment{example}{%
+  \VerbatimEnvironment
+  \begin{VerbatimOut}{example.tex}}{%
+  \end{VerbatimOut}
   \begin{center}
   \begin{minipage}{.4\textwidth}
     \input{example.tex}
   \end{minipage}%
   \begin{minipage}{.6\textwidth}
-    \small
-    \expandafter\VerbatimInput\expandafter[\exampleoptions]{example.tex}
+    \small\VerbatimInput[gobble=0]{example.tex}
   \end{minipage}%
   \end{center}
 }
 
-\setcounter{tocdepth}{2}
-
 \begin{document}
 \maketitle
 
-\begin{multicols}{2}
-  \tableofcontents
-\end{multicols}
+\tableofcontents
 
 \section{Introduction}
 
 The \env{ebproof} package provides commands to typeset proof trees, in the
 style of sequent calculus and related systems:
 
-\begin{example}{gobble=2}
+\begin{example}
   \begin{prooftree}
     \hypo{ \Gamma, A &\vdash B }
     \infer1[abs]{ \Gamma &\vdash A\to B }
@@ -103,36 +72,25 @@ suggestions, through the web page of the project at \url{https://framagit.org/ma
 
 \section{Environments}
 
+\DescribeEnv{prooftree}
+\DescribeEnv{prooftree*}
 The package provides the \env{prooftree} environment, in a standard and
 starred variants.
+\begin{syntax}
+  \verb|\begin{prooftree}|\oarg{options}
+  ~ \meta{statements}
+  \verb|\end{prooftree}|
+\end{syntax}
+This typesets the proof tree described by the \meta{statements}, as described
+in section~\ref{sec:statements}.
+The \meta{options} provide default formatting options for the proof tree.
 
-\begin{csdoc}{
-    \cs{begin}\lit{\{prooftree\}}\oarg{options}
-      \meta{statements}
-    \cs{end}\lit{\{prooftree\}}}
-  Typeset the proof tree described by the \meta{statements}, as described in
-  section~\ref{sec:statements}.
-  The \meta{options} provide default formatting options for the proof tree.
-  This environment can be used either in math mode or in text mode.
-  It produces a proof tree at the current position in the text flow.
-\end{csdoc}
+Following the conventions of \package{amsmath} for alignment environments, the
+non-starred version produces a proof tree at the current position in the text
+flow (it can be used in math mode or text mode) while the starred version
+typesets the proof on a line of its own, like a displayed formula.
 
-\begin{csdoc}{
-    \cs{begin}\lit{\{prooftree*\}}\oarg{options}
-      \meta{statements}
-    \cs{end}\lit{\{prooftree*\}}}
-  Typeset the proof on a line of its own; it is essentially equivalent to
-  wrapping the \env{prooftree} environment inside a displayed math
-  environment.
-\end{csdoc}
-
-\noindent
-The starred version is used in situations when a single proof will be
-displayed.
-The non-starred version is useful in order to integrate the proof into some
-larger structure, like two parts of a formula:
-
-\begin{example}{gobble=2}
+\begin{example}
   \[
     \begin{prooftree}
       \infer0{ \vdash A }
@@ -159,7 +117,7 @@ build an inference with these two subtrees as premisses and the given text as
 conclusion.
 
 Hence statements operate on a stack of proof trees.
-At the beginning of a \lit{prooftree} environment, the stack is empty.
+At the beginning of a \env{prooftree} environment, the stack is empty.
 At the end, it must contain exactly one tree, which is the one that will be
 printed.
 
@@ -169,7 +127,7 @@ If you have a macro with the same name as one of the statements, for instance
 \cs{hypo}, then this macro will keep its meaning outside \env{prooftree}
 environments as well as inside the arguments of a statement.
 If you really need to access the statements in another context, you can can
-always call them by prefixing their names with \lit{ebproof}, for instance as
+always call them by prefixing their names with \texttt{ebproof}, for instance as
 \cs{ebproofhypo}.
 
 \subsection{Basic statements}
@@ -177,26 +135,34 @@ always call them by prefixing their names with \lit{ebproof}, for instance as
 The basic statements for building proofs are the following, where
 \meta{options} stands for arbitrary options as described in
 section~\ref{sec:options}.
-\begin{csdoc}{\cs{hypo}\oarg{options}\marg{text}}
-  Push a new proof tree consisting only in one conclusion line, with no
-  premiss and no line above, in other words a tree with only a leaf
-  (\cs{hypo} stands for \emph{hypothesis}).
-\end{csdoc}
-\begin{csdoc}{\cs{infer}\oarg{options}\marg{arity}\oarg{label}\marg{text}}
-  Build an inference step by taking some proof trees from the top of the
-  stack, assembling them with a rule joining their conclusions and putting a
-  new conclusion below.
-  The \meta{arity} is the number of sub-proofs, it may be any number
-  including 0 (in this case there will be a line above the conclusion but no
-  sub-proof).
-  If \meta{label} is present, it is used as the label on the right of the
-  inference line; it is equivalent to using the \opt{right label} option.
-\end{csdoc}
+
+\DescribeMacro{\hypo}
+The statement \cs{hypo} pushes a new proof tree consisting only in one
+conclusion line, with no premiss and no line above, in other words a tree with
+only a leaf (\cs{hypo} stands for \emph{hypothesis}).
+\begin{syntax}
+  \cs{hypo}\oarg{options}\marg{text}
+\end{syntax}
+
+\DescribeMacro{\infer}
+The statement \cs{infer} builds an inference step by taking some proof trees
+from the top of the stack, assembling them with a rule joining their
+conclusions and putting a new conclusion below.
+\begin{syntax}
+  \cs{infer}\oarg{options}\meta{arity}\oarg{label}\marg{text}
+\end{syntax}
+The \meta{arity} is the number of sub-proofs, it may be any number
+including 0 (in this case there will be a line above the conclusion but no
+sub-proof).
+If \meta{label} is present, it is used as the label on the right of the
+inference line; it is equivalent to using the \cmd{right label} option.
+
+\medskip
 
 The \meta{text} in these statements is the contents of the conclusion at the
 root of the tree that the statements create.
 It is typeset in math mode by default but any kind of formatting can be used
-instead, using the \opt{template} option.
+instead, using the \cmd{template} option.
 The \meta{label} text is formatted in horizontal text mode by default.
 
 Each proof tree has a vertical axis, used for alignment of successive steps.
@@ -209,7 +175,7 @@ same position as the axis of the conclusion.
 If there are several premisses, it places the axis at the center between the
 left of the leftmost conclusion and the right of the rightmost conclusion:
 
-\begin{example}{gobble=2}
+\begin{example}
   \begin{prooftree}
     \hypo{ &\vdash A, B, C }
     \infer1{ A &\vdash B, C }
@@ -221,204 +187,213 @@ left of the leftmost conclusion and the right of the rightmost conclusion:
   \end{prooftree}
 \end{example}
 
-\begin{csdoc}{\cs{ellipsis}\marg{label}\marg{text}}
-  Typeset vertical dots, with a label on the right, and a new conclusion.
-  No inference lines are inserted.
-  \begin{example}{gobble=4}
-    \begin{prooftree}
-      \hypo{ \Gamma &\vdash A }
-      \ellipsis{foo}{ \Gamma &\vdash A, B }
-    \end{prooftree}
-  \end{example}
-\end{csdoc}
+\DescribeMacro{\ellipsis}
+The statement \cs{ellipsis} typesets vertical dots, with a label on the right,
+and a new conclusion. No inference lines are inserted.
+\begin{syntax}
+  \cs{ellipsis}\marg{label}\marg{text}
+\end{syntax}
+\begin{example}
+  \begin{prooftree}
+    \hypo{ \Gamma &\vdash A }
+    \ellipsis{foo}{ \Gamma &\vdash A, B }
+  \end{prooftree}
+\end{example}
 
 
 \subsection{Modifying proof trees}
 
 The following additional statements may be used to affect the format of the
-last proof tree on the stack:
+last proof tree on the stack.
 
-\begin{csdoc}{\cs{rewrite}\marg{code}}
-  Rewrite the proof while preserving its size and alignment. The \meta{code}
-  is typeset in horizontal mode, with the following control sequences defined:
-  \begin{itemize}
-  \item \cs{treebox} is a box register that contains the original material,
-  \item \cs{treemark}\marg{name} expands as the position of a given mark with
-    respect to the left of the box.
-  \end{itemize}
-  A simple use of this statement is to change the color of a proof tree:
-  \begin{example}{gobble=4}
-    \begin{prooftree}
-      \hypo{ \Gamma, A &\vdash B }
-      \infer1[abs]{ \Gamma &\vdash A\to B }
-      \rewrite{\color{red}\box\treebox}
-      \hypo{ \Gamma \vdash A }
-      \infer2[app]{ \Gamma \vdash B }
-    \end{prooftree}
-  \end{example}
-  Note the absence of spaces inside the call to \cs{rewrite}, because spaces
-  would affect the position of the tree box.
-  Note also that explicit use of \cs{treebox} is required to actually draw the
-  subtree.
-  Not using it will effectively not render the subtree, while still reserving
-  its space in the enclosing tree:
-  \begin{example}{gobble=4}
-    \begin{prooftree}
-      \hypo{ \Gamma, A &\vdash B }
-      \infer1[abs]{ \Gamma &\vdash A\to B }
-      \rewrite{}
-      \hypo{ \Gamma \vdash A }
-      \infer2[app]{ \Gamma \vdash B }
-    \end{prooftree}
-  \end{example}
-  This kind of manipulation is useful for instance in conjunction with the
-  \package{beamer} package to allow revealing subtrees of a proof tree
-  progressively in successive slides of a given frame.
-\end{csdoc}
+\DescribeMacro{\rewrite}
+The statement \cs{rewrite} is used to modify the proof of the stack while
+preserving its size and alignment.
+\begin{syntax}
+  \cs{rewrite}\marg{code}
+\end{syntax}
+The \meta{code} is typeset in horizontal mode, with the following control
+sequences defined:
+\begin{itemize}
+\item \cs{treebox} is a box register that contains the original material,
+\item \cs{treemark}\marg{name} expands as the position of a given mark with
+  respect to the left of the box.
+\end{itemize}
+A simple use of this statement is to change the color of a proof tree:
+\begin{example}
+  \begin{prooftree}
+    \hypo{ \Gamma, A &\vdash B }
+    \infer1[abs]{ \Gamma &\vdash A\to B }
+    \rewrite{\color{red}\box\treebox}
+    \hypo{ \Gamma \vdash A }
+    \infer2[app]{ \Gamma \vdash B }
+  \end{prooftree}
+\end{example}
+Note the absence of spaces inside the call to \cs{rewrite}, because spaces
+would affect the position of the tree box.
+Note also that explicit use of \cs{treebox} is required to actually draw the
+subtree.
+Not using it will effectively not render the subtree, while still reserving
+its space in the enclosing tree:
+\begin{example}
+  \begin{prooftree}
+    \hypo{ \Gamma, A &\vdash B }
+    \infer1[abs]{ \Gamma &\vdash A\to B }
+    \rewrite{}
+    \hypo{ \Gamma \vdash A }
+    \infer2[app]{ \Gamma \vdash B }
+  \end{prooftree}
+\end{example}
+This kind of manipulation is useful for instance in conjunction with the
+\package{beamer} package to allow revealing subtrees of a proof tree
+progressively in successive slides of a given frame.
 
-\begin{csdoc}{\cs{delims}\marg{left}\marg{right}}
-  Put left and right delimiters around the whole sub-proof, without changing
-  the alignment (the spacing is affected by the delimiters, however).
-  The \meta{left} text must contain an opening occurrence of \cs{left} and the
-  \meta{right} text must contain a matching occurrence of \cs{right}.
-  For instance, \verb|\delims{\left(}{\right)}| will put the
-  sub-proof between parentheses.
-  \begin{example}{gobble=4}
-    \begin{prooftree}
-      \hypo{ A_1 \vee \cdots \vee A_n }
-      \hypo{ [A_i] }
-      \ellipsis{}{ B }
-      \delims{ \left( }{ \right)_{1\leq i\leq n} }
-      \infer2{ B }
-    \end{prooftree}
-  \end{example}
-\end{csdoc}
+\DescribeMacro{\delims}
+The statement \cs{delims} puts left and right delimiters around the whole
+sub-proof, without changing the alignment (the spacing is affected by the
+delimiters, however).
+\begin{syntax}
+  \cs{delims}\marg{left}\marg{right}
+\end{syntax}
+The \meta{left} text must contain an opening occurrence of \cs{left} and the
+\meta{right} text must contain a matching occurrence of \cs{right}.
+For instance, \verb|\delims{\left(}{\right)}| will put the
+sub-proof between parentheses.
+\begin{example}
+  \begin{prooftree}
+    \hypo{ A_1 \vee \cdots \vee A_n }
+    \hypo{ [A_i] }
+    \ellipsis{}{ B }
+    \delims{ \left( }{ \right)_{1\leq i\leq n} }
+    \infer2{ B }
+  \end{prooftree}
+\end{example}
 
 \section{Options}
 \label{sec:options}
 
 The formatting of trees, conclusion texts and inference rules is affected by
 options, specified using the \LaTeX3 key-value system.
-All options are in the \lit{ebproof} module in the key tree.
+All options are in the \texttt{ebproof} module in the key tree.
 They can be set locally for a proof tree or for a single statement using
 optional arguments in the associated commands.
 
-\begin{csdoc}{\cs{ebproofset}\marg{options}}
-  Set some options.
-  The options will apply in the current scope; using this in preamble will
-  effectively set options globally.
-  Specific options may also be specified for each proof tree and for each
-  statement in a proof tree, using optional arguments.
-\end{csdoc}
+\DescribeMacro{\ebproofset}
+\DescribeMacro{\set}
+The statement \cs{ebproofset} is used to set some options. When used inside a
+\env{prooftree} environment, it can written \cs{set}.
+\begin{syntax}
+  \cs{ebproofset}\marg{options}
+\end{syntax}
+The options will apply in the current scope; using this in preamble will
+effectively set options globally.
+Specific options may also be specified for each proof tree and for each
+statement in a proof tree, using optional arguments.
 
 \subsection{General shape}
 
 The options in this section only make sense at the global level and at the
 proof level.
-Changing the proof style inside a \lit{proof} environment has undefined
+Changing the proof style inside a \env{proof} environment has undefined
 behaviour.
 
-\begin{csdoc}{\opt{proof style=}\meta{name}}
-  Set the general shape for representing proofs.
-  The following styles are provided:
-  \begin{csdoc}{\lit{upwards}}
-    This is the default style.
-    Proof trees grow upwards, with conclusions below and premisses above.
-  \end{csdoc}
-  \begin{csdoc}{\lit{downwards}}
-    Proof trees grow downwards, with conclusions above and premisses below.
-    \begin{example}{gobble=4}
-      \begin{prooftree}[proof style=downwards]
-        \hypo{ \Gamma, A &\vdash B }
-        \infer1[abs]{ \Gamma &\vdash A\to B }
-        \hypo{ \Gamma \vdash A }
-        \infer2[app]{ \Gamma \vdash B }
-      \end{prooftree}
-    \end{example}
-  \end{csdoc}
-\end{csdoc}
-
-In the optional argument of \lit{prooftree} environments, proof styles can
-be specified directly, without prefixing the name by ``\lit{proof style=}''.
-For instance, the first line of the example above could be written
-\cs{begin}\lit{\{prooftree\}[downwards]} equivalently.
-
-\begin{csdoc}{\opt{center=}\meta{boolean}}
-  If set to \lit{true}, the tree produced by the \env{prooftree} environment
-  will be vertically centered around the text line.
-  If set to \lit{false}, the base line of the tree will be the base line of
-  the conclusion.
-  The default value is \lit{true}.
-  \begin{example}{gobble=4}
-    \begin{prooftree}[center=false]
-      \infer0{ A \vdash A }
-    \end{prooftree}
-    \qquad
-    \begin{prooftree}[center=false]
-      \hypo{ \Gamma, A \vdash B }
-      \infer1{ \Gamma \vdash A \to B }
-    \end{prooftree}
-  \end{example}
-\end{csdoc}
-
-\subsection{Spacing}
-
-\begin{csdoc}{\opt{separation=}\meta{dimension}}
-  The horizontal separation between sub-proofs in an inference.
-  The default value is \lit{1.5em}.
-  \begin{example}{gobble=4}
-    \begin{prooftree}[separation=0.5em]
-      \hypo{ A } \hypo{ B } \infer2{ C }
-      \hypo{ D } \hypo{ E } \hypo{ F } \infer3{ G }
-      \hypo{ H } \infer[separation=3em]3{ K }
-    \end{prooftree}
-  \end{example}
-\end{csdoc}
-
-\begin{csdoc}{\opt{rule margin=}\meta{dimension}}
-  The spacing above and below inference lines.
-  The default value is \lit{0.7ex}.
-  \begin{example}{gobble=4}
-    \begin{prooftree}[rule margin=2ex]
+\DescribeOption{proof style}
+The option \cmd{proof style} sets the general shape for representing proofs.
+The following styles are provided:
+\begin{description}
+\item[upwards] 
+  This is the default style.
+  Proof trees grow upwards, with conclusions below and premisses above.
+\item[downwards]
+  Proof trees grow downwards, with conclusions above and premisses below.
+  \begin{example}
+    \begin{prooftree}[proof style=downwards]
       \hypo{ \Gamma, A &\vdash B }
       \infer1[abs]{ \Gamma &\vdash A\to B }
       \hypo{ \Gamma \vdash A }
       \infer2[app]{ \Gamma \vdash B }
     \end{prooftree}
   \end{example}
-\end{csdoc}
+\end{description}
+
+In the optional argument of \env{prooftree} environments, proof styles can
+be specified directly, without prefixing the name by ``\texttt{proof style=}''.
+For instance, the first line of the example above could be written
+\verb|\begin{prooftree}| equivalently.
+
+\DescribeOption{center}
+The option \cmd{center} toggles vertical centering of typeset proofs.
+If set to \texttt{true}, the tree produced by the \env{prooftree} environment
+will be vertically centered around the text line.
+If set to \texttt{false}, the base line of the tree will be the base line of
+the conclusion.
+The default value is \texttt{true}.
+\begin{example}
+  \begin{prooftree}[center=false]
+    \infer0{ A \vdash A }
+  \end{prooftree}
+  \qquad
+  \begin{prooftree}[center=false]
+    \hypo{ \Gamma, A \vdash B }
+    \infer1{ \Gamma \vdash A \to B }
+  \end{prooftree}
+\end{example}
+
+\subsection{Spacing}
+
+\DescribeOption{separation}
+Horizontal separation between sub-proofs in an inference is defined by the
+option \cmd{separation}.
+The default value is \texttt{1.5em}.
+\begin{example}
+  \begin{prooftree}[separation=0.5em]
+    \hypo{ A } \hypo{ B } \infer2{ C }
+    \hypo{ D } \hypo{ E } \hypo{ F } \infer3{ G }
+    \hypo{ H } \infer[separation=3em]3{ K }
+  \end{prooftree}
+\end{example}
+
+\DescribeOption{rule margin}
+The spacing above and below inference lines is defined by the option
+\cmd{rule margin}.
+The default value is \texttt{0.7ex}.
+\begin{example}
+  \begin{prooftree}[rule margin=2ex]
+    \hypo{ \Gamma, A &\vdash B }
+    \infer1[abs]{ \Gamma &\vdash A\to B }
+    \hypo{ \Gamma \vdash A }
+    \infer2[app]{ \Gamma \vdash B }
+  \end{prooftree}
+\end{example}
 
 \subsection{Shape of inference lines}
 
-\begin{csdoc}{\opt{rule style=}\meta{name}}
-  Set the shape of inference lines.
-  The following values are provided:
-  \begin{csdoc}{\opt{simple}}
-    A simple horizontal rule is drawn.
-    This is the default style.
-  \end{csdoc}
-  \begin{csdoc}{\opt{no rule}}
-    No inference line is drawn.
-    A single space of the length of \lit{rule margin} is inserted.
-  \end{csdoc}
-  \begin{csdoc}{\opt{double}}
-    A double line is drawn.
-  \end{csdoc}
-  \begin{csdoc}{\opt{dashed}}
-    A single dashed line is drawn.
-  \end{csdoc}
-  The precise rendering is influenced by parameters specified below.
-  Arbitrary new shapes can defined using the \lit{rule code} option described
-  below and the \cs{ebproofnewrulestyle} command described in
-  section~\ref{sec:styles}.
-\end{csdoc}
+\DescribeOption{rule style}
+The shape of inference lines is set by the option \cmd{rule style}.
+The following values are provided:
+\begin{description}
+\item[simple]
+  A simple horizontal rule is drawn.
+  This is the default style.
+\item[no rule]
+  No line is drawn.
+  A single space of the length of \texttt{rule margin} is inserted.
+\item[double]
+  A double line is drawn.
+\item[dashed]
+  A single dashed line is drawn.
+\end{description}
+The precise rendering is influenced by parameters specified below.
+Arbitrary new shapes can defined using the \texttt{rule code} option described
+below and the \cs{ebproofnewrulestyle} command described in
+section~\ref{sec:styles}.
 
 In the optional argument of the \cs{infer} statement, rule styles can be
-specified directly, without prefixing the style name by ``\lit{rule style=}''.
-For instance, \cs{infer}\lit{[dashed]} is equivalent to
-\cs{infer}\lit{[rule style=dashed]}.
+specified directly, without prefixing the style name by ``\texttt{rule style=}''.
+For instance, \verb|\infer[dashed]| is equivalent to
+\verb|\infer[rule style=dashed]|.
 
-\begin{example}{gobble=2}
+\begin{example}
   \begin{prooftree}
     \hypo{ \Gamma &\vdash A \to B }
     \infer[no rule]1{ \Gamma &\vdash {!A} \multimap B }
@@ -431,112 +406,98 @@ For instance, \cs{infer}\lit{[dashed]} is equivalent to
   \end{prooftree}
 \end{example}
 
-\begin{csdoc}{\opt{rule thickness=}\meta{dimension}}
-  The thickness of inference lines.
-  It is \lit{0.4pt} by default.
-\end{csdoc}
-\begin{csdoc}{\opt{rule separation=}\meta{dimension}}
-  The distance between the two lines in the \lit{double} rule style.
-  It is \lit{2pt} by default.
-\end{csdoc}
-\begin{csdoc}{\opt{rule dash length=}\meta{dimension}}
-  The length of dashes in the \lit{dashed} rule style.
-  It is \lit{0.2em} by default.
-\end{csdoc}
-\begin{csdoc}{\opt{rule dash space=}\meta{dimension}}
-  The space between dashes in the \lit{dashed} rule style.
-  It is \lit{0.3em} by default.
-\end{csdoc}
+\DescribeOption{rule thickness}
+\DescribeOption{rule separation}
+The thickness of inference lines is defined by option \cmd{rule thickness},
+it is \texttt{0.4pt} by default.
+The distance between the two lines in the \texttt{double} rule style is
+defined by the \cmd{rule separation} option.
+It is \texttt{2pt} by default.
+\DescribeOption{rule dash length}
+\DescribeOption{rule dash space}
+For dashed rules, the length of dashes is defined by the option
+\cmd{rule dash length} and the space between dashes is defined by the option
+\cmd{rule dash space}.
+The default values are \texttt{0.2em} and \texttt{0.3em} respectively.
 
-\begin{csdoc}{\opt{rule code=}\meta{code}}
-  This option is used to define an arbitrary shape for rules.
-  The \meta{code} is used to render the rule, it is executed in vertical mode
-  in a \cs{vbox} whose \cs{hsize} is set to the width of the rule.
-  Margins above and below are inserted automatically (they can be removed by
-  setting \lit{rule margin} to \lit{0pt}).
+\DescribeOption{rule code}
+Arbitrary rule shapes can be optained using the \cmd{rule code} option.
+The argument is code is used to render the rule, it is executed in vertical
+mode in a \cs{vbox} whose \cs{hsize} is set to the width of the rule.
+Margins above and below are inserted automatically (they can be removed by
+setting \texttt{rule margin} to \texttt{0pt}).
 
-  \begin{example}{gobble=4}
-    \begin{prooftree}[rule code={\hbox{\tikz
-        \draw[decorate,decoration={snake,amplitude=.3ex}]
-        (0,0) -- (\hsize,0);}}]
-      \hypo{ \Gamma &\vdash A }
-      \infer1{ \Gamma &\vdash A, \ldots, A }
-      \hypo{ \Delta, A, \ldots, A \vdash \Theta }
-      \infer2{ \Gamma, \Delta \vdash \Theta }
-    \end{prooftree}
-  \end{example}
-  Note that this example requires the \package{tikz} package, with the
-  \package{decorations.pathmorphing} library for the \lit{snake} decoration.
-\end{csdoc}
+\begin{example}
+  \begin{prooftree}[rule code={\hbox{\tikz
+      \draw[decorate,decoration={snake,amplitude=.3ex}]
+      (0,0) -- (\hsize,0);}}]
+    \hypo{ \Gamma &\vdash A }
+    \infer1{ \Gamma &\vdash A, \ldots, A }
+    \hypo{ \Delta, A, \ldots, A \vdash \Theta }
+    \infer2{ \Gamma, \Delta \vdash \Theta }
+  \end{prooftree}
+\end{example}
+Note that this example requires the \package{tikz} package, with the
+\package{decorations.pathmorphing} library for the \texttt{snake} decoration.
 
-\subsection{Format of conclusions}
+\subsection{Format of conclusions and labels}
 
-\begin{csdoc}{%
-    \opt{template=}\meta{code} \\
-    \opt{left template=}\meta{code} \\
-    \opt{right template=}\meta{code}}
-  Defines how conclusions are formatted.
-  The code is arbitrary \TeX\ code, composed in horizontal mode.
-  The macro \cs{inserttext} is used to insert the actual text passed to the
-  \cs{hypo} and \cs{infer} statements.
-  The \opt{template} value is used for conclusions with no alignment mark.
-  The \opt{left template} and \opt{right template} values are used on the left
-  and right side of the alignment mark when it is present.
-  The default value for \opt{template} is simply \verb|$\inserttext$|, so that
-  conclusions are set in math mode.
-  The default values for \opt{left template} and \opt{right template} are
-  similar, with spacing assuming that a relation symbol is put near the
-  alignment mark, so that \verb|\infer1{A &\vdash B}| is spaced correctly.
+\DescribeOption{template}
+\DescribeOption{left template}
+\DescribeOption{right template}
+The format of text in inferences is defined by templates.
+The option \cmd{template} is used for text with no alignment mark, the options
+\cmd{left template} and \cmd{right template} are used for the left and right
+side of the alignment mark when it is present.
+The value of these options is arbitrary \TeX\ code, composed in horizontal mode.
+The macro \cs{inserttext} is used to insert the actual text passed to the
+\cs{hypo} and \cs{infer} statements.
+The default value for \cmd{template} is simply \verb|$\inserttext$|, so that
+conclusions are set in math mode.
+The default values for \cmd{left template} and \cmd{right template} are
+similar, with spacing assuming that a relation symbol is put near the
+alignment mark, so that \verb|\infer1{A &\vdash B}| is spaced correctly.
 
-  \begin{example}{gobble=4}
-    \begin{prooftree}[template=(\textbf\inserttext)]
-      \hypo{ foo }
-      \hypo{ bar }
-      \infer1{ baz }
-      \infer2{ quux }
-    \end{prooftree}
-  \end{example}
-\end{csdoc}
+\begin{example}
+  \begin{prooftree}[template=(\textbf\inserttext)]
+    \hypo{ foo }
+    \hypo{ bar }
+    \infer1{ baz }
+    \infer2{ quux }
+  \end{prooftree}
+\end{example}
 
-\subsection{Format of labels}
+\DescribeOption{left label}
+\DescribeOption{right label}
+The text to use as the labels of the rules, on the left and on the right
+of the inference line, is defined by the options \cmd{left label} and
+\cmd{right label}.
+Using the second optional argument in \cs{infer} is equivalent to setting
+the \env{right label} option with the value of that argument.
 
-\begin{csdoc}{%
-    \opt{left label=}\meta{text} \\
-    \opt{right label=}\meta{text}}
-  The text to use as the labels of the rules, on the left and on the right
-  of the inference line.
-  Using the second optional argument in \cs{infer} is equivalent to setting
-  the \env{right label} option with the value of that argument.
+\begin{example}
+  \begin{prooftree}
+    \hypo{ \Gamma, A &\vdash B }
+    \infer[left label=$\lambda$]1[abs]
+      { \Gamma &\vdash A\to B }
+    \hypo{ \Gamma \vdash A }
+    \infer[left label=@]2[app]{ \Gamma \vdash B }
+  \end{prooftree}
+\end{example}
 
-  \begin{example}{gobble=4}
-    \begin{prooftree}
-      \hypo{ \Gamma, A &\vdash B }
-      \infer[left label=$\lambda$]1[abs]
-        { \Gamma &\vdash A\to B }
-      \hypo{ \Gamma \vdash A }
-      \infer[left label=@]2[app]{ \Gamma \vdash B }
-    \end{prooftree}
-  \end{example}
-\end{csdoc}
-\begin{csdoc}{%
-    \opt{left label template=}\meta{code} \\
-    \opt{right label template=}\meta{code}}
-  Defines how rule labels are formatted.
-  The code is arbitrary \TeX\ code, composed in horizontal mode.
-  The macro \cs{inserttext} can be used to insert the actual label text, as
-  defined by the options above.
-  The default values are simply \cs{inserttext} so that labels are set in
-  plain text mode.
-\end{csdoc}
-
-\begin{csdoc}{\opt{label separation=}\meta{dimension}}
-  The spacing between an inference lines and its labels.
-  The default value is \lit{0.5em}.
-\end{csdoc}
-\begin{csdoc}{\opt{label axis=}\meta{dimension}}
-  The height of the horizontal axis used for aligning the labels with the
-  rules. The default value is \lit{0.5ex}.
-\end{csdoc}
+\DescribeOption{left label template}
+\DescribeOption{right label template}
+Similarly to conclusions, labels are formatted according to templates.
+The code is arbitrary \TeX\ code, composed in horizontal mode, where
+the macro \cs{inserttext} can be used to insert the actual label text.
+The default values are simply \cs{inserttext} so that labels are set in
+plain text mode.
+\DescribeOption{label separation}
+The spacing between an inference line and its labels is defined by the option
+\cmd{label separation}, the default value is \texttt{0.5em}.
+The height of the horizontal axis used for aligning the labels with the
+rules is defined by the option \cmd{label axis}, the default value is
+\texttt{0.5ex}.
 
 
 \subsection{Style macros}
@@ -548,45 +509,49 @@ basic style options, in a way similar to PGF's ``styles'' and \LaTeX3's
 This allows setting a bunch of options with the same values in many proofs
 using a single definition.
 
-\begin{csdoc}{\cs{ebproofnewstyle}\marg{name}\marg{options}}
-  Define a new style option \meta{name} that sets the given \meta{options}.
+\DescribeMacro{\ebproofnewstyle}
+The statement \cs{ebproofnewstyle} defines a new style option with some
+\meta{name} that sets a given set of \meta{options}:
+\begin{syntax}
+  \cs{ebproofnewstyle}\marg{name}\marg{options}
+\end{syntax}
+For instance, the following code defines a new option \cmd{small} that sets
+various parameters so that proofs are rendered smaller.
+\begin{example}
+  \ebproofnewstyle{small}{
+    separation = 1em, rule margin = .5ex,
+    template = \footnotesize$\inserttext$ }
+  \begin{prooftree}[small]
+    \hypo{ \Gamma, A \vdash B }
+    \infer1{ \Gamma \vdash A\to B }
+    \hypo{ \Gamma \vdash A } \infer2{ \Gamma \vdash B }
+  \end{prooftree}
+\end{example}
 
-  For instance, the following code defines a new option \opt{small} that sets
-  various parameters so that proofs are rendered smaller.
-  \begin{example}{gobble=4}
-    \ebproofnewstyle{small}{
-      separation = 1em, rule margin = .5ex,
-      template = \footnotesize$\inserttext$ }
-    \begin{prooftree}[small]
-      \hypo{ \Gamma, A \vdash B }
-      \infer1{ \Gamma \vdash A\to B }
-      \hypo{ \Gamma \vdash A } \infer2{ \Gamma \vdash B }
-    \end{prooftree}
-  \end{example}
-\end{csdoc}
+\DescribeMacro{\ebproofnewrulestyle}
+The statement \cs{ebproofnewrulestyle} does the same for rule styles:
+\begin{syntax}
+  \cs{ebproofnewrulestyle}\marg{name}\marg{options}
+\end{syntax}
+The \meta{options} part includes options used to set how to draw rules in
+the new style.
 
-\begin{csdoc}{\cs{ebproofnewrulestyle}\marg{name}\marg{options}}
-  Define a new rule style.
-  The \meta{options} part includes options used to set how to draw rules in
-  the new style.
-
-  The option \opt{rule code} is useful in this command as it allows to
-  define arbitrary rule styles.
-  For instance, the squiggly rule example above could be turned into a new
-  rule style \lit{zigzag} with the following code:
-  \begin{example}{gobble=4}
-    \ebproofnewrulestyle{zigzag}{
-      rule code = {\hbox{\tikz
-        \draw[decorate,decoration={snake,amplitude=.3ex}]
-        (0,0) -- (\hsize,0);}}}
-    \begin{prooftree}
-      \hypo{ \Gamma &\vdash A }
-      \infer1{ \Gamma &\vdash A, \ldots, A }
-      \hypo{ \Delta, A, \ldots, A \vdash \Theta }
-      \infer[zigzag]2{ \Gamma, \Delta \vdash \Theta }
-    \end{prooftree}
-  \end{example}
-\end{csdoc}
+The option \cmd{rule code} is useful in this command as it allows to
+define arbitrary rule styles.
+For instance, the squiggly rule example above could be turned into a new
+rule style \texttt{zigzag} with the following code:
+\begin{example}
+  \ebproofnewrulestyle{zigzag}{
+    rule code = {\hbox{\tikz
+      \draw[decorate,decoration={snake,amplitude=.3ex}]
+      (0,0) -- (\hsize,0);}}}
+  \begin{prooftree}
+    \hypo{ \Gamma &\vdash A }
+    \infer1{ \Gamma &\vdash A, \ldots, A }
+    \hypo{ \Delta, A, \ldots, A \vdash \Theta }
+    \infer[zigzag]2{ \Gamma, \Delta \vdash \Theta }
+  \end{prooftree}
+\end{example}
 
 
 \section{License}
@@ -633,11 +598,11 @@ chronological order.
   The new commands and options are the following:
   \begin{itemize}
   \item The statement \cs{rewrite} generalizes \cs{Alter},
-  \item The option \opt{label axis} controls vertical alignment of labels.
+  \item The option \cmd{label axis} controls vertical alignment of labels.
   \end{itemize}
 \item[Version 1.1]
   A bugfix release.
-  In \opt{template} options, one now uses \cs{inserttext} instead of \lit{\#1}
+  In \cmd{template} options, one now uses \cs{inserttext} instead of \verb|#1|
   for the text arguments, which improves robustness.
 \item[Version 1.0]
   The first public release.
